2009-11-06  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/c-i386.texi: Move .lwp.

2009-11-06  Alan Modra  <amodra@bigpond.net.au>

	* config/obj-elf.c (obj_elf_change_section): Remove FIXME from
	comment.

2009-11-05  Sebastian Pop  <sebastian.pop@amd.com>
	    Quentin Neill  <quentin.neill@amd.com>

	* config/tc-i386.c (cpu_arch): Add CPU_LWP_FLAGS.
	(build_vex_prefix): Handle xop09 and xop0a.
	(build_modrm_byte): Handle vexlwp.
	(md_show_usage): Add lwp.
	* doc/c-i386.texi (i386-LWP): New section.

2009-11-04  DJ Delorie  <dj@redhat.com>

	* config/rx-parse.y (MVTIPL): Update bit pattern.
	(cpen): Remove.

2009-11-04  Daniel Jacobowitz  <dan@codesourcery.com>
	    Maxim Kuvyrkov  <maxim@codesourcery.com>

	* config/tc-m68k.h (CF_DIFF_EXPR_OK): Define to 0 for uClinux.
	(CFI_DIFF_LSDA_OK): Define.
	* config/te-uclinux.h: New file.
	* configure.tgt (m68k-uclinux): Define em.
	* dw2gencfi.c (CFI_DIFF_LSDA_OK): New macro.
	(dot_cfi_lsda, output_fde): Use instead of CFI_DIFF_EXPR_OK.

2009-11-03  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (do_vfp_nsyn_mla_mls): Fix vmls encoding.

2009-11-02  Paul Brook  <paul@codesourcery.com>

	* doc/c-arm.texi: Document new -mfpu options.
	* config/tc-arm.c (fpu_vfp_ext_v3xd, fpu_vfp_fp16, fpu_neon_ext_fma,
	fpu_vfp_ext_fma): New.
	(NEON_ENC_TAB): Add vfma, vfms, vfnma and vfnms.
	(do_vfp_nsyn_fma_fms, do_neon_fmac): New functions.
	(insns): Move double precision load/store.  Split out double
	precision VFPv3 instrucitons.  Add VFPv4 instructions.
	(arm_fpus): Add VFPv3-FP16, VFPv3xD and VFPv4 variants.
	(aeabi_set_public_attributes): Set VFPv4 variants

2009-11-02  Alan Modra  <amodra@bigpond.net.au>

	* ecoff.c (ecoff_symbol_clone_hook): New function.
	* ecoff.h (ecoff_symbol_clone_hook): Declare.
	* obj.h (struct format_ops): Add symbol_clone_hook.
	* config/obj-aout.c (aout_format_ops): Init new field.
	* config/obj-coff.c (coff_format_ops): Likewise.
	* config/obj-ecoff.c (ecoff_format_ops): Likewise.