@@ -707,14 +707,18 @@ print_insn_arg (const char *d,
 	    {"%sfc", 0x000}, {"%dfc", 0x001}, {"%cacr", 0x002},
 	    {"%tc",  0x003}, {"%itt0",0x004}, {"%itt1", 0x005},
 	    {"%dtt0",0x006}, {"%dtt1",0x007}, {"%buscr",0x008},
+	    {"%rgpiobar", 0x009}, {"%acr4",0x00c},
+	    {"%acr5",0x00d}, {"%acr6",0x00e}, {"%acr7", 0x00f},
 	    {"%usp", 0x800}, {"%vbr", 0x801}, {"%caar", 0x802},
 	    {"%msp", 0x803}, {"%isp", 0x804},
 	    {"%pc", 0x80f},
 	    /* Reg c04 is sometimes called flashbar or rambar.
-	       Rec c05 is also sometimes called rambar.  */
+	       Reg c05 is also sometimes called rambar.  */
 	    {"%rambar0", 0xc04}, {"%rambar1", 0xc05},
 
-	    {"%mbar", 0xc0f},
+	    /* reg c0e is sometimes called mbar2 or secmbar.
+	       reg c0f is sometimes called mbar.  */
+	    {"%mbar0", 0xc0e}, {"%mbar1", 0xc0f},
 
 	    /* Should we be calling this psr like we do in case 'Y'?  */
 	    {"%mmusr",0x805},
